<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_clientes"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="salesforce.prototipo.com.salesforce.Activities.CadClientesActivity"
    tools:layout_editor_absoluteY="81dp">

    <Button
        android:id="@+id/btnlimpar"
        android:layout_width="109dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_toEndOf="@+id/editTextCont"
        android:layout_toRightOf="@+id/editTextCont"
        android:elevation="0dp"
        android:text="@string/botao_limpar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnInsEdiCli"
        app:layout_constraintTop_toBottomOf="@+id/editTextCont"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="UnusedAttribute" />

    <ImageView
        android:id="@+id/imageViewCliCad"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/clients_48"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/editTextRazSocCli"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textViewRazSocCli"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/nom_razsoc"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/textViewCPFouCNPJ"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRazSocCli" />

    <EditText
        android:id="@+id/editTextInsEst"
        android:layout_width="213dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/editTextCont"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/editTextCont"
        android:layout_below="@+id/textView3"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/isento"
        android:inputType="textPersonName"
        android:selectAllOnFocus="false"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="106dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editTextInsEst"
        android:layout_marginStart="10dp"
        android:paddingEnd="5dp"
        android:text="@string/texto_telefone"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/editTextTel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextInsEst" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editTextCpfCnpj"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="10dp"
        android:text="@string/texto_inscricao"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/editTextInsEst"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCpfCnpj" />

    <TextView
        android:id="@+id/textViewCPFouCNPJ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editTextRazSocCli"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="10dp"
        android:text="@string/texto_cpfoucnpj"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/editTextCpfCnpj"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRazSocCli" />

    <Button
        android:id="@+id/btnInsEdiCli"
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_toEndOf="@+id/textView4"
        android:layout_toRightOf="@+id/textView4"
        android:text="@string/botao_Concluir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnlimpar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCont" />

    <TextView
        android:id="@+id/textViewRazSocCli"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/radioGroupTipo"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="10dp"
        android:text="@string/texto_NomeOuRazSocCli"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/editTextRazSocCli"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupTipo" />

    <RadioGroup
        android:id="@+id/radioGroupTipo"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignWithParentIfMissing="false"
        android:layout_below="@+id/textView"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:checkedButton="@+id/rbFisica"
        android:clickable="true"
        android:keepScreenOn="false"
        android:labelFor="@+id/activity_clientes"
        android:layerType="none"
        android:longClickable="false"
        android:measureWithLargestChild="true"
        android:orientation="horizontal"
        android:saveEnabled="false"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/textViewRazSocCli"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RadioButton
            android:id="@+id/rbFisica"
            android:layout_width="98dp"
            android:layout_height="match_parent"
            android:checked="true"
            android:duplicateParentState="true"
            android:text="@string/texto_fisica" />

        <RadioButton
            android:id="@+id/rbJuridica"
            android:layout_width="92dp"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/texto_juridica"
            android:textAllCaps="false" />

    </RadioGroup>

    <EditText
        android:id="@+id/editTextCont"
        android:layout_width="213dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView4"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/Contato"
        android:inputType="phone"
        android:selectAllOnFocus="false"
        app:layout_constraintBottom_toTopOf="@+id/btnlimpar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewContato" />

    <EditText
        android:id="@+id/editTextCpfCnpj"
        android:layout_width="213dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textViewCPFouCNPJ"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/cpf_ou_cnpj"
        android:inputType="number"
        android:maxLines="1"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCPFouCNPJ" />

    <TextView
        android:id="@+id/TextViewSenha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_toRightOf="@+id/imageViewCliCad"
        android:paddingTop="3dp"
        android:text="@string/texto_clientes"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageViewCliCad"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:text="@string/tipo_de_pessoa"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/radioGroupTipo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewCliCad" />

    <TextView
        android:id="@+id/textViewContato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editTextCont"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="10dp"
        android:text="Contato"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/editTextCont"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTel" />

    <EditText
        android:id="@+id/editTextTel"
        android:layout_width="213dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnInsEdiCli"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/Tel"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/textViewContato"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

</android.support.constraint.ConstraintLayout>
