<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="salesforce.prototipo.com.salesforce.Activities.MainActivity">

    <TextView
        android:id="@+id/textViewPedidos"
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        android:layout_alignEnd="@+id/textViewSincronizar"
        android:layout_alignLeft="@+id/textViewSincronizar"
        android:layout_alignRight="@+id/textViewSincronizar"
        android:layout_alignStart="@+id/textViewSincronizar"
        android:layout_below="@+id/imageViewPedidos"
        android:layout_marginStart="8dp"
        android:text="@string/texto_pedidos"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/imageViewPedidos" />

    <TextView
        android:id="@+id/textViewSincronizar"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_alignLeft="@+id/imageViewSincronizar"
        android:layout_alignStart="@+id/imageViewSincronizar"
        android:layout_below="@+id/imageViewSincronizar"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/texto_sincronizar"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/imageViewSincronizar" />

    <ImageView
        android:id="@+id/imageViewPedidos"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewPedidos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageViewClientes"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/shopping_cart_add_128"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageViewClientes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewClientes"
        app:layout_constraintEnd_toStartOf="@+id/imageViewPedidos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/clients_add_128"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textViewClientes"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_alignBaseline="@+id/textViewPedidos"
        android:layout_alignBottom="@+id/textViewPedidos"
        android:layout_alignEnd="@+id/imageViewClientes"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/imageViewClientes"
        android:layout_marginEnd="8dp"
        android:text="@string/texto_clientes"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView10"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewClientes" />

    <TextView
        android:id="@+id/textViewAgendamentos"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_alignBaseline="@+id/textViewSincronizar"
        android:layout_alignBottom="@+id/textViewSincronizar"
        android:layout_alignEnd="@+id/imageViewAgendamentos"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/imageViewAgendamentos"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/texto_agendamento"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewAgendamentos" />

    <ImageView
        android:id="@+id/imageViewSincronizar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/imageViewAgendamentos"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewSincronizar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageViewAgendamentos"
        app:layout_constraintTop_toBottomOf="@+id/imageView10"
        app:srcCompat="@drawable/refresh_128"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="wrap_content"
        android:layout_height="141dp"
        android:layout_above="@+id/imageViewSincronizar"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textViewPedidos"
        android:adjustViewBounds="false"
        android:cropToPadding="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/multy_logo"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageViewAgendamentos"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignEnd="@+id/textViewClientes"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/textViewClientes"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewAgendamentos"
        app:layout_constraintEnd_toStartOf="@+id/imageViewSincronizar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView10"
        app:srcCompat="@drawable/salesman_128"
        tools:ignore="ContentDescription" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</android.support.constraint.ConstraintLayout>
